# TFormula

./: .gitignore  CMakeLists.txt  Examples.txt  Results.txt  Source.cpp  TFormula.cpp  TFormula.h  TFormula.sln  TFormula.vcxproj  TFormula.vcxproj.filters  TStack.h  TTable.h  Translator.cpp  Translator.h  Validator.cpp  Validator.h
Debug/: TFormula.exe.recipe  TFormula.ilk  TFormula.vcxproj.FileListAbsolute.txt  translator.obj.enc  validator.obj.enc  vc142.idb
Debug/TFormula.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TFormula.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: TFormula.exe.recipe  TFormula.ilk  TFormula.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/TFormula.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TFormula.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
